evaluation-service/k8s/namespace-evaluation.yml
apiVersion: v1
kind: Namespace
metadata:
  name: evaluation
  labels:
    application: evaluation
