evaluation-service/k8s/deployment-evaluation.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: evaluation
  labels:
    app: evaluation-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      containers:
        - name: evaluation-service
          image: evaluation-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8004

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 15
            periodSeconds: 20
