evaluation-service/k8s/service-evaluation.yml
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: evaluation
spec:
  selector:
    app: evaluation-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
